fix description on mobile

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -342,3 +342,7 @@ span.medium{
 .home-filter{
   padding-right: 10px;
 }
+
+.statement-description{
+  margin-left: 25%;
+}
